added link to term paper on jupyter notebook

--- a/Mark 1.ipynb
+++ b/Mark 1.ipynb
@@ -16,7 +16,8 @@
     "Our model uses unsupervised learning, more specifically creates a decoder from the training data then uses the decoder to decode the testing data.\n",
     "\n",
     "Link to the pitch talk which highlights our idea in more detail: https://docs.google.com/presentation/d/1TsljP_CYUNU8F0qEeb-vXzG6FSWaU5R1PI5Xx1kBa4s/edit?usp=sharing\n",
-    "\n"
+    "\n",
+    "Link to term paper: https://docs.google.com/document/d/1MOwNo2fCIBoCrqcHnFHrbyNMeSEMaRIxoSYYLZOqx7Y/edit?usp=sharing"
    ]
   },
   {
