forgot to include notebook changes

--- a/Mark 1.ipynb
+++ b/Mark 1.ipynb
@@ -313,6 +313,8 @@
     "\n",
     "**Decoding (w.o. Noise)**\n",
     "\n",
+    "\n",
+    "\n",
     "$\\hat{x} = Da$\n",
     "\n",
     "$D^T \\approx (A A^T)^{-1}AX^T$\n",
@@ -328,6 +330,7 @@
     "X = np.array(...) # d x N array\n",
     "D = np.linal.lstsq(A.T, X.T)[0].T\n",
     "```\n",
+    "More Info: [Moore-Penrose Inverse](https://en.wikipedia.org/wiki/Moore%E2%80%93Penrose_inverse)\n",
     "\n",
     "**Decoding (w. Noise)**\n",
     "> Biological neural systems are subject to significant amounts of noise from various sources. Any analysis of such systems must take the effects of noise into account.\n",
