--- a/Mark 1.ipynb
+++ b/Mark 1.ipynb
@@ -78,7 +78,7 @@
     "classes_dir = ['/Industrial', '/Residential']\n",
     "\n",
     "val_ratio = 0\n",
-    "test_ratio = 0.2\n",
+    "test_ratio = 0.2 # 80/20 training/testing split\n",
     "\n",
     "for cls in classes_dir:\n",
     "    for name in [\"/train\", \"/val\", \"/test\"]:\n",
@@ -228,7 +228,7 @@
     }
    ],
    "source": [
-    "datagen = ImageDataGenerator(rescale=1./255)\n",
+    "datagen = ImageDataGenerator(rescale=1./255) # Keras\n",
     "\n",
     "x_train_iterator = datagen.flow_from_directory('Data/train/', class_mode='categorical',shuffle=True,seed=101,target_size=(64,64), color_mode=\"grayscale\", batch_size=5500)\n",
     "\n",
@@ -279,14 +279,14 @@
     "            V = Vprev + dt * dvdt\n",
     "            if V < vrest:\n",
     "                V = vrest\n",
-    "            elif V > vth:\n",
+    "            elif V > vth: # Cause a spike\n",
     "                spike_train[i] = 1\n",
     "                V = vrest\n",
     "                mutex = np.round(t_ref/dt)\n",
     "            Jprev = J[i]\n",
     "            Vprev = V\n",
     "        else:\n",
-    "            mutex -= 1\n",
+    "            mutex -= 1 # Tick down refractory timer\n",
     "    return spike_train\n"
    ]
   },
@@ -418,10 +418,10 @@
     "    \"\"\"\n",
     "    Temporal Decoder to decode the spike trains during LIF neuron simulation\n",
     "    \"\"\"\n",
-    "    t = np.linspace(0,Tsim,int(np.round(Tsim/dt)))\n",
-    "    h = np.exp(-(t-Tsim/2)/t_psc)\n",
-    "    h[0:len(h)//2] = 0\n",
-    "    h = (1/dt)*h/np.sum(h)\n",
+    "    t = np.linspace(0,Tsim,int(np.round(Tsim/dt))) #evenly spaced time values\n",
+    "    h = np.exp(-(t-Tsim/2)/t_psc) #t_psc is network param\n",
+    "    h[0:len(h)//2] = 0 #set first half of h to zero\n",
+    "    h = (1/dt)*h/np.sum(h) #divide h by timestep * sum of h\n",
     "    return h\n",
     "\n",
     "def sample_spherical(npoints): #sample a vector of dimension \"ndim\" from the unit sphere randomly\n",
@@ -456,17 +456,18 @@
     "        amax = np.random.uniform(100, 200)  # maximum firing rates randomly chosen (uniformly distributed between 100Hz and 200Hz at x=1)\n",
     "        xi = np.random.uniform(-0.95, 0.95) # x-intercepts uniformly distributed between -0.95 and 0.95\n",
     "\n",
-    "        alpha = (1/(1-np.exp((t_ref - 1/amax)/t_rc)) - 1)/(1-xi) #slope=(y2-y1)/(x2-x1)\n",
-    "        J_bias = 1 - xi * alpha #y-intercept (assume e in this case to be 1)\n",
+    "        alpha = (1/(1-np.exp((t_ref - 1/amax)/t_rc)) - 1)/(1-xi) # slope=(y2-y1)/(x2-x1)\n",
+    "        J_bias = 1 - xi * alpha # y-intercept (assume e in this case to be 1)\n",
     "\n",
-    "        e = sample_spherical(input_size)\n",
+    "        e = sample_spherical(input_size) # randomize weight direction (magnitude will be 1)\n",
     "\n",
-    "        alpha_vec[i] = alpha\n",
-    "        J_bias_vec[i] = J_bias\n",
-    "        e_vec[i] = e\n",
+    "        alpha_vec[i] = alpha #set gain factor\n",
+    "        J_bias_vec[i] = J_bias # set residual state\n",
+    "        e_vec[i] = e # set weight orientation\n",
     "\n",
     "        a_x = np.zeros(num_input)\n",
     "\n",
+    "        # training\n",
     "        for j in range(num_input):\n",
     "            J_M = np.multiply(alpha, np.inner(e, x_train[j].reshape(input_size))) + J_bias\n",
     "            if J_M > 1:\n",
@@ -480,6 +481,7 @@
     "    s = np.random.normal(mu, sigma, A_train.shape)\n",
     "    A_noisy = np.add(A_train, s) \n",
     "\n",
+    "    # decoding\n",
     "    global decoder\n",
     "    decoder = np.linalg.lstsq(\n",
     "        A_train.T @ A_train + 0.5 * num_input * np.square(sigma) * np.eye(hidden_size), A_train.T @ one_hot_train\n",
@@ -519,11 +521,13 @@
     "    t = np.linspace(0, Tsim, Tlen)\n",
     "\n",
     "    for i in range(hidden_size):\n",
+    "        # pull out hidden neuron params\n",
     "        alpha = alpha_vec[i]\n",
     "        J_bias = J_bias_vec[i]\n",
     "        e = e_vec[i]\n",
     "        a_x = np.zeros((num_input, Tlen))\n",
     "        \n",
+    "        # run test on input\n",
     "        for j in range(num_input):\n",
     "            J_M = np.multiply(alpha, np.inner(e, x_test[j].reshape(input_size))) + J_bias\n",
     "            Jin = J_M*np.ones(Tlen)\n",
@@ -618,7 +622,7 @@
    "source": [
     "### 2.2.2\n",
     "\n",
-    "**Training to Classify Digits: 1,8**"
+    "**Training to Classify Images as Residential or Industrial**"
    ]
   },
   {
