Updated README to reflect jupyter notebook

--- a/Mark 1.ipynb
+++ b/Mark 1.ipynb
@@ -559,13 +559,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Testing (NO LONGER USING)"
-   ]
-  },
-  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -620,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.2\n",
+    "### Final Output\n",
     "\n",
     "**Training to Classify Images as Residential or Industrial**"
    ]
